# jornada-python

./: pyproject.toml
aula_01/: desafio.py
aula_02/: exercicios.py  main.py  rabiscos.py
aula_03/: exercicios.py  main.py
